feat: add admin page and CRUD operations

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,10 +68,10 @@ img {
 
 @layer components {
     .btn-primary {
-        @apply h-10 px-4 text-white transition-all rounded-3xl bg-primary-main hover:bg-primary-dark hover:text-gray-300;
+        @apply h-10 px-4 text-white transition-all rounded-3xl bg-primary-main hover:bg-primary-dark hover:text-gray-300 disabled:bg-neutral-dark disabled:text-gray-300;
     }
     .btn-secondary {
-        @apply px-12 py-2 text-xl rounded-full font-medium border border-neutral-dark text-secondary-dark;
+        @apply px-12 py-2 text-xl rounded-full font-medium border border-neutral-dark text-secondary-dark disabled:text-gray-400 disabled:border-gray-400;
     }
     .custom-container {
         @apply mx-6 sm:mx-8 xl:mx-auto xl:w-[var(--container)];
