--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,11 @@ body {
     box-sizing: inherit;
 }
 
+[type='search'] {
+    -webkit-appearance: textfield;
+    outline-offset: -1px;
+}
+
 a {
     color: inherit;
     text-decoration: none;
